--- a/src/app/listuser/listuser.component.html
+++ b/src/app/listuser/listuser.component.html
@@ -5,11 +5,14 @@
     </ul>
   </div>
 
-  <div *ngIf="userSelected" class="bg-danger">
+
+  <div *ngIf="userSelected" class="bg-danger h-25">
     <p>Nom : {{userSelected.name}}</p> 
+    <p class="bg-light">Modifier Nom : <input type="text" [(ngModel)]="userSelected.name"></p>
     <p>Nom d'utilisateur : {{userSelected.username}}</p> 
     <p>Phone : {{userSelected.phone}}</p>
     <p>website : {{userSelected.website}}</p>
   </div>
+  
 </div>
 
