--- a/src/app/listuser/listuser.component.html
+++ b/src/app/listuser/listuser.component.html
@@ -1,18 +1,11 @@
 <div class="row mt-5">
   <div class="col-sm-6">
     <ul class="list-group" *ngFor="let post of Listuser">
-      <li class="list-group-item" (click)="onUserDetails(post)">{{post.name}}</li>
+      <li class="list-group-item" >
+         <a [routerLink]="['/detail', post.id]" routerLinkActive="active" 
+            class="nav-item nav-link active">{{post.name}} </a>
+      </li>
     </ul>
   </div>
-
-
-  <div *ngIf="userSelected" class="bg-danger h-25">
-    <p>Nom : {{userSelected.name}}</p> 
-    <p class="bg-light">Modifier Nom : <input type="text" [(ngModel)]="userSelected.name"></p>
-    <p>Nom d'utilisateur : {{userSelected.username}}</p> 
-    <p>Phone : {{userSelected.phone}}</p>
-    <p>website : {{userSelected.website}}</p>
-  </div>
-  
 </div>
-
+  
