--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,13 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="">User </a>
+    <a class="navbar-brand" href="">Utilisateurs </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a routerLink="/" routerLinkActive="active" class="nav-item nav-link active">Crisis Center</a>
+        <a routerLink="/" routerLinkActive="active" class="nav-item nav-link active">Listes</a>
       </div>
     </div>
   </nav>
